--- a/debian/control
+++ b/debian/control
@@ -1,9 +1,8 @@
 Source: pika-wallpapers
 Section: gnome
 Priority: optional
-Maintainer: Jeremy Soller <jeremy@system76.com>
-Uploaders: Ian Santopietro <ian@system76.com>
-Build-Depends: debhelper (>= 9)
+Maintainer: Ward Nakchbandi <hotrod.master@hotmail.com>
+Build-Depends: debhelper-compat (= 13)
 Standards-Version: 3.9.8
 Homepage: https://github.com/PikaOS-Linux/pkg-pika-wallpapers
 
